src/styling/06_components/content/_c-content.scss
.content {

    &__container {
        height: 800px;
        width: 100%;
        background-color: #FFFFFF;
        display: -webkit-box;
        display: -moz-box;
        display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;
        justify-content: space-around;
        margin-bottom: 200px;

        &--right {
            @media (max-width: $grid-lg) {
                flex-direction: column-reverse;
                height: auto;
                text-align: center;
                margin-bottom: 100px;
            }
        }

        &--left {
            @media (max-width: $grid-lg) {
                flex-direction: column;
                height: auto;
                text-align: center;
                margin-bottom: 100px;
            }
        }
    }

    &__imagecontainer {
        position: relative;
        width: 100%;
        background-color: #FFFFFF;
        opacity: 0;

        @media (max-width: $grid-lg) {
            width: 100%;
            height: 100vh;
        }

        & .content__imagelayout {
            display: none;
        }

        & .content__imagelayout:first-child {
            display: -webkit-box;
            display: -moz-box;
            display: -ms-flexbox;
            display: -webkit-flex;
            display: flex;
        }
    }

    &__textcontainer {
        position: relative;
        background-color: #FFFFFF;
        width: 100%;

        @media (max-width: $grid-lg) {
            width: 100%;
            height: 100vh;
        }
    }

    &__imagelayout {
        height: auto;
        width: auto;
        background-color: #FFFFFF;
        position: absolute;
        left: 50%;
        top: 50%;
        -webkit-transform: translateY(-50%) translateX(-50%);
        display: -webkit-box;
        display: -moz-box;
        display: -ms-flexbox;
        display: -webkit-flex;
        display: flex;
        justify-content: center;
        align-items: center;

        @media (max-width: $grid-lg) {
            height: 100%;
        }

        @media (max-width: $grid-sm) {
            width: 100%;
            height: 100%;
            display: -webkit-box;
            display: -moz-box;
            display: -ms-flexbox;
            display: -webkit-flex;
            display: flex;

        }
    }

    &__image {
        height: auto;
        max-width: 50vw;
        max-height: 100%;

        @media (max-width: $grid-sm) {
            width: 100%;
            height: auto;
            margin: auto 0;
        }

        @media (max-width: $grid-lg) {
            max-width: none;
        }
    }

    &__text {
        height: auto;
        max-height: 80%;
        width: 400px;
        background-color: #FFFFFF;
        position: absolute;
        left: 50%;
        top: 50%;
        -webkit-transform: translateY(-50%) translateX(-50%);

        @media (max-width: $grid-sm) {
            width: 100%;
            padding: 10px;
        }
    }
}

